--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -125,17 +125,14 @@
         </item>
         <item>
          <widget class="QFilesListDragAndDrop" name="listWidgetFilesToSign">
-          <property name="acceptDrops">
-           <bool>true</bool>
-          </property>
           <property name="dragEnabled">
            <bool>true</bool>
           </property>
           <property name="dragDropMode">
            <enum>QAbstractItemView::DragDrop</enum>
           </property>
-          <property name="defaultDropAction">
-           <enum>Qt::CopyAction</enum>
+          <property name="alternatingRowColors">
+           <bool>true</bool>
           </property>
           <property name="sortingEnabled">
            <bool>false</bool>
@@ -731,7 +728,7 @@ p, li { white-space: pre-wrap; }
      <x>0</x>
      <y>0</y>
      <width>420</width>
-     <height>17</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
@@ -747,7 +744,7 @@ p, li { white-space: pre-wrap; }
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroupHashAlgo"/>
   <buttongroup name="buttonGroupTimestampHashAlgo"/>
+  <buttongroup name="buttonGroupHashAlgo"/>
  </buttongroups>
 </ui>
